# dcs-studio

./: .gitattributes  .gitignore  .gitlab-ci.yml  .vscodeignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PATTERNS.md  README.md  RELEASING.md  SPEC.md  THIRD_PARTY_NOTICES.md  biome.json  clippy.toml  dcs-studio.toml  package-lock.json  package.json  playwright.config.ts  playwright.lang.config.ts  playwright.teaser.config.ts  pnpm-lock.yaml  preview-author.html  preview-docs.html  preview-nav.html  preview-skills.html  preview.html  tsconfig.json  vite.config.js  vitest.config.ts
.cargo/: config.toml
bridge/: Cargo.toml  dcs-studio-bridge.lua
bridge/.cargo/: config.toml
bridge/Scripts/Hooks/: DcsStudio.lua
bridge/crates/bridge-core/: Cargo.toml  build.rs
bridge/crates/bridge-core/lua/: debug_engine.lua  gui_db.lua  gui_methods.lua  methods_shared.lua  mission_methods.lua  rt.lua
bridge/crates/bridge-core/src/: console.rs  debug.rs  facade.rs  file.rs  globals.rs  json.rs  lib.rs  locks.rs  logger.rs  lua_utils.rs  luadef.rs  module_config.rs  path_guard.rs  protocol.rs  sqlite.rs  surface.rs  toml_codec.rs
bridge/crates/bridge-core/src/jsonrpc/: mod.rs  openrpc.rs  router.rs  server.rs
bridge/crates/bridge-core/tests/: debug_ws_latency.rs  openrpc_meta_schema.rs
bridge/crates/bridge-core/tests/fixtures/: openrpc-meta-schema.json
bridge/crates/bridge-gui/: Cargo.toml
bridge/crates/bridge-gui/openrpc/: dcs_studio_gui.openrpc.json
bridge/crates/bridge-gui/src/: lib.rs
bridge/crates/bridge-gui/types/: dcs_studio_gui.d.lua
bridge/crates/bridge-mission/: Cargo.toml
bridge/crates/bridge-mission/lua/: mission_init.lua
bridge/crates/bridge-mission/openrpc/: dcs_studio_mission.openrpc.json
bridge/crates/bridge-mission/src/: lib.rs
bridge/crates/bridge-mission/types/: dcs_studio_mission.d.lua
bridge/deploy/: deploy.ps1
bridge/hook/: DcsStudio.lua
crates/app/: Cargo.toml  tauri.conf.json
crates/app/capabilities/: default.json
crates/app/icons/: icon.icns
crates/app/src/: build.rs  cancel.rs  cargolua.rs  database_cmd.rs  dcs.rs  deeplink.rs  find_cmd.rs  format.rs  fs.rs  github.rs  inject.rs  install_cmd.rs  launch.rs  lib.rs  logs.rs  lsp.rs  market.rs  mcp.rs  mission.rs  packages_cmd.rs  publish.rs  startup.rs  term.rs  todos_cmd.rs  types_cmd.rs  watch.rs
crates/app/tests/: capabilities.rs  host_ipc.rs  window_state.rs
crates/dcs-bridge/: Cargo.toml
crates/dcs-bridge-client/: Cargo.toml
crates/dcs-bridge-client/src/: client.rs  lib.rs  protocol.rs
crates/dcs-bridge/deploy/: deploy.ps1
crates/dcs-bridge/deploy/Scripts/Hooks/: DcsStudio.lua
crates/dcs-bridge/src/: debug.rs  facade.rs  file.rs  globals.rs  json.rs  lib.rs  logger.rs  lua_utils.rs  module_config.rs  sqlite.rs  surface.rs
crates/dcs-bridge/src/jsonrpc/: mod.rs  router.rs  server.rs
crates/dcs-bridge/types/: dcs_studio.d.lua
crates/dcs-lua-ide/: Cargo.toml
crates/dcs-lua-ide/src/: lib.rs
crates/dcs-lua-lsp-core/: Cargo.toml
crates/dcs-lua-lsp-core/src/: analysis.rs  annot.rs  assignable.rs  check.rs  completion.rs  definition.rs  fold.rs  hover.rs  infer.rs  inlay.rs  lib.rs  lints.rs  operands.rs  param_infer.rs  references.rs  rename.rs  requires.rs  resolve.rs  symbols.rs  ty_table.rs  workspace.rs
crates/dcs-lua-lsp-core/tests/: parity.rs
crates/dcs-lua-lsp-core/tests/features/: crossfile.feature  diagnostics.feature  inlay_hint.feature  type_inference.feature
crates/dcs-lua-require/: Cargo.toml
crates/dcs-lua-require/src/: lib.rs  roots.rs  scan.rs
crates/dcs-studio-cli/: Cargo.toml
crates/dcs-studio-cli/src/: bundle.rs  check.rs  fmt.rs  lsp.rs  main.rs  mcp.rs  pkg.rs  scaffold.rs  sources.rs  templates.rs  test.rs
crates/dcs-studio-cli/tests/: bundle_cli.rs  check_cli.rs  fmt_cli.rs  pkg.rs  stdio.rs  test_cli.rs
crates/dcs-studio-cli/tests/common/: mod.rs
crates/dcs-studio-project/: Cargo.toml
crates/dcs-studio-project/src/: detect.rs  find.rs  install.rs  lib.rs  logging.rs  luadef.rs  manifest.rs  mcp.rs  process.rs  scaffold.rs  sources.rs  templates.rs  todos.rs  toolchain.rs
crates/dcs-studio-project/tests/: template_compile.rs
crates/lua-analyzer/: Cargo.toml
crates/lua-analyzer/src/: main.rs  server.rs
crates/lua-analyzer/tests/: stdio.rs
crates/lua-cargo/: Cargo.toml
crates/lua-cargo/src/: bundle.rs  git.rs  lib.rs  main.rs  manifest.rs  requires.rs  resolve.rs
crates/mock-package-server/: Cargo.toml
crates/mock-package-server/src/: lib.rs  main.rs
crates/mock-package-server/tests/: http.rs
crates/studio-archive/: Cargo.toml
crates/studio-archive/src/: lib.rs
crates/studio-mcp/: Cargo.toml
crates/studio-mcp/src/: check.rs  lib.rs
crates/studio-mcp/tests/: debug_live.rs  handler.rs
crates/studio-packages/: Cargo.toml
crates/studio-packages/src/: archive.rs  build.rs  fsutil.rs  hash.rs  identity.rs  install.rs  lib.rs  linkfs.rs  manifest.rs  signing.rs
crates/studio-packages/tests/: roundtrip.rs
crates/studio-services/: Cargo.toml
crates/studio-services/src/: database.rs  fs.rs  github.rs  github_http.rs  inject.rs  launcher.rs  lib.rs  link.rs  linker.rs  logs.rs  market.rs  mission.rs  progress.rs  publish.rs  term.rs  types.rs
crates/studio-services/src/market/: library.rs  payload.rs  resolve.rs
native/: Cargo.toml
native/crates/bridge-core/: Cargo.toml
native/crates/bridge-core/lua/: rt.lua
native/crates/bridge-core/src/: console.rs  debug.rs  file.rs  logging.rs  surface.rs  toml_codec.rs
native/crates/bridge-gui/src/: lib.rs
native/crates/bridge-mission/lua/: mission_init.lua
native/crates/bridge-mission/types/: dcs_studio_mission.d.lua
native/deploy/: deploy.ps1
native/deploy/Scripts/Hooks/: DcsStudio.lua
native/src/: console.rs  debug.rs  facade.rs  file.rs  globals.rs  lib.rs  logger.rs  luadef.rs  sqlite.rs  surface.rs  toml_codec.rs
native/src/jsonrpc/: mod.rs  server.rs
native/types/: dcs_studio.d.lua
tools/lua-runner/: Cargo.toml
tools/lua-runner/src/: main.rs  prelude.lua  run.rs
tools/lua-runner/tests/: runner.rs
(+592 files in other folders)
