[package]
name = "dcs-studio"
license.workspace = true
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lints.clippy]
# Safety / no-shortcuts (production): `unwrap`/`expect`/panic → a propagated
# `Result`, a safe fallback, or a guarded precondition. Pedantic is intentionally
# NOT taken here (engine-crate only); test `unwrap`/`expect`/`dbg` exempt via clippy.toml.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
indexing_slicing = "warn"
clone_on_copy = "warn"
needless_borrow = "warn"
needless_lifetimes = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dcs_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net"] }
tracing = { workspace = true }
# Standard MCP server transport (issue #39): the IDE hosts its agent tool
# surface over MCP Streamable HTTP via the official SDK, no hand-rolled wire.
rmcp = { version = "0.9", features = ["server", "transport-streamable-http-server"] }
axum = "0.8"
dcs-bridge-client = { path = "../dcs-bridge-client" }
dcs-studio-project = { path = "../dcs-studio-project" }
dcs-lua-fmt = { path = "../dcs-lua-fmt" }
studio-services = { path = "../studio-services" }
studio-packages = { path = "../studio-packages" }
studio-mcp = { path = "../studio-mcp" }
# IDE fetch/bundle (issue #51): the app runs lua-cargo's resolver + bundler
# in-process, the same toolchain the CLI uses.
lua-cargo = { path = "../lua-cargo" }
base64 = "0.22"
# Workspace filesystem watcher (issue #40): a recursive notify watch with a
# small debounce so bursts (saves, git ops) collapse into one UI refresh.
notify = "6"
notify-debouncer-mini = "0.4"

