[package]
name = "dcs-bridge-client"
license.workspace = true
edition.workspace = true
version.workspace = true

[lints.clippy]
# Safety / no-shortcuts (production): `unwrap`/`expect`/panic → a propagated
# `Result`, a safe fallback, or a guarded precondition. Pedantic intentionally
# NOT taken (engine-crate only); test `unwrap`/`expect`/`dbg` exempt via clippy.toml.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
indexing_slicing = "warn"
clone_on_copy = "warn"
needless_borrow = "warn"
needless_lifetimes = "warn"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2"
tokio = { workspace = true, features = ["net"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
