[package]
name = "dcs-bridge"
edition.workspace = true
version.workspace = true

[lints.clippy]
# Safety / no-shortcuts — and this crate is the in-DCS DLL, where a panic crashes
# the live sim: `unwrap`/`expect`/panic → a propagated `Result`, a safe fallback,
# or a guarded precondition. Pedantic intentionally not taken; tests exempt via clippy.toml.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
indexing_slicing = "warn"
clone_on_copy = "warn"
needless_borrow = "warn"
needless_lifetimes = "warn"

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.10", features = ["lua51", "module", "serialize", "macros"] }
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-ws = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
log = "0.4"
log4rs = "1"
dcs-bridge-client = { path = "../dcs-bridge-client" }
