[package]
name = "dcs-bridge"
edition.workspace = true
version.workspace = true

[lints.clippy]
# Safety / no-shortcuts — and this crate is the in-DCS DLL, where a panic crashes
# the live sim: `unwrap`/`expect`/panic → a propagated `Result`, a safe fallback,
# or a guarded precondition. Pedantic intentionally not taken; tests exempt via clippy.toml.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
indexing_slicing = "warn"
clone_on_copy = "warn"
needless_borrow = "warn"
needless_lifetimes = "warn"

# The package keeps the historical name `dcs-bridge` (so `-p dcs-bridge`, the
# `.cargo/config.toml` LUA_LIB path, and the embedded-hook includes are stable),
# but the produced cdylib is `dcs_studio.dll`: this crate is now the full
# DCS Studio runtime, not just the bridge listener. The Lua module fn in
# lib.rs must match this name — mlua derives `luaopen_dcs_studio` from it and
# `require("dcs_studio")` resolves the DLL basename.
[lib]
name = "dcs_studio"
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.10", features = ["lua51", "module", "serialize", "macros"] }
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-ws = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
# Bundled SQLite (vendored C, compiled via `cc` into the cdylib) — no external
# sqlite3.dll. Independent of the LUA_LIB pin: mlua resolves `lua_*` against
# DCS's import lib; rusqlite statically links its own SQLite.
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4"
log4rs = "1"
dcs-bridge-client = { path = "../dcs-bridge-client" }
# The lua-free type model + `.d.lua` emitter the binding facade records into,
# so the live mlua surface and its generated definitions can't drift.
dcs-studio-project = { path = "../dcs-studio-project" }
