[package]
name = "dcs-lua-lsp-core"
license.workspace = true
version.workspace = true
edition = "2024"

[lints]
workspace = true

[lib]
name = "dcs_lua_lsp_core"
path = "src/lib.rs"

[dependencies]
dcs-lua-syntax = { path = "../dcs-lua-syntax" }
# The shared require scanner + module-resolution path mapping. The engine
# resolves `require("mod")` through the SAME code the lua-cargo bundler uses, so
# editor and bundler agree on where a module lives (issue #51 parity). Pure —
# the engine supplies workspace membership as the existence predicate (no I/O).
dcs-lua-require = { path = "../dcs-lua-require" }
serde = { version = "1", features = ["derive"] }
# Facade only (wasm-safe); native binaries install the subscriber.
tracing = { workspace = true }

[dev-dependencies]
cucumber = "0.21"
tokio = { workspace = true }

# The LuaLS-parity BDD suite (plan "Cucumber harness"): Gherkin features
# under tests/features with step definitions carrying the assertions. The
# real cucumber runner, distinct from the golden-diffing conformance tests
# in dcs-lua-syntax.
[[test]]
name = "parity"
harness = false
