[package]
name = "dcs-studio-project"
version.workspace = true
edition = "2024"

[lints]
workspace = true

[dependencies]
dcs-lua-fmt = { path = "../dcs-lua-fmt" }
dcs-lua-syntax = { path = "../dcs-lua-syntax" }
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
walkdir = "2"
