# Signed, revocable mod packages — Tauri-free core shared by the app and CLI
# (model/studio/package.pds, issue #37). The client holds NO keys: the signing
# server signs the manifest at build time and validates it at install time.
[package]
name = "studio-packages"
edition.workspace = true
version.workspace = true

[lints.clippy]
# Safety / no-shortcuts (production): `unwrap`/`expect`/panic → a propagated
# `Result`, a safe fallback, or a guarded precondition. Pedantic intentionally
# NOT taken (engine-crate only); test `unwrap`/`expect`/`dbg` exempt via clippy.toml.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
indexing_slicing = "warn"
clone_on_copy = "warn"
needless_borrow = "warn"
needless_lifetimes = "warn"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
dcs-studio-project = { path = "../dcs-studio-project" }
zip = "2"
sha2 = "0.10"
ureq = { version = "2", features = ["json"] }
