# Tauri-free IDE service logic shared by the desktop app (thin Tauri command
# wrappers in crates/app) and the IDE-hosted MCP tool surface (crates/studio-mcp,
# model/studio/mcp.pds, issue #8).
#
# Edition 2021 to match the app crate the logic moved from; the engine
# crates' pedantic workspace lints are deliberately not opted into so the
# moved code stays behaviourally identical.
[package]
name = "studio-services"
edition.workspace = true
version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dcs-bridge-client = { path = "../dcs-bridge-client" }
dcs-studio-project = { path = "../dcs-studio-project" }
# Integrated terminal (model/studio/term.pds, issue #13): real pseudo-terminals
# so full-screen TUIs render; wezterm's crate, ConPTY-backed on Windows.
portable-pty = "0.9"
trash = "5.2.6"
# GitHub device-flow HTTP (issue #11); same client the signing seam uses.
ureq = { version = "2", features = ["json"] }
# Basic-auth header for the publish push (issue #12), passed to git via env so
# the token never lands in argv.
base64 = "0.22"
# Package a release payload (publish) + unpack it on Marketplace install
# (issue #10/#12); same crate the signed-package writer uses.
zip = "2"
# Persistent per-user data dir for the Marketplace content store + ledger
# (issue #10) — must survive reboot, unlike temp.
dirs = "6"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
# Token storage in the Windows Credential Manager (issue #11). Windows-only,
# like winreg above; non-Windows builds (CI) use the in-memory fallback in github.rs.
keyring = { version = "3", features = ["windows-native"] }
