# The mission bridge: loaded into the mission scripting state by the GUI
# hook's boot dispatch, serves 127.0.0.1:25570.
[package]
name = "dcs-bridge-mission"
version.workspace = true
edition.workspace = true
license.workspace = true

# mlua derives `luaopen_dcs_studio_mission` from the lib name and
# require("dcs_studio_mission") resolves the DLL basename — the two must match.
[lib]
name = "dcs_studio_mission"
crate-type = ["cdylib"]

[dependencies]
dcs-bridge-core.workspace = true
mlua.workspace = true
